# boostnet

./: CMakeLists.txt  cifar.cpp  cifar.h  dense.cpp  dense.h  forest.h  function.cpp  function.h  functions.h  losses.cpp  losses.h  main.cpp  mnist.cpp  mnist.h  model.cpp  model.h  optimize.cpp  optimize.h  random.h  tree.cpp  tree.h  unused.h  util.h
